--- a/programs/WHoleSpecie_Jannetworks.Rmd
+++ b/programs/WHoleSpecie_Jannetworks.Rmd
@@ -272,6 +272,7 @@ NormType<-"CPM"
 #Filter low expression genes
 #keep<-rowSums(Nrepl_data>1)>=12 #as most lowly expressed genes are slightly above 0(=1), so we filter starting at 1 rep and more than 10 total in samples
 keep<-rowSums(Nrepl_data>=0)>=0 #@@ only >=0 erases bell curve
+keep<-apply(Nrepl_data, 1, max)>=0
 Nrepl_data<-Nrepl_data[keep,]
 
 #Nrepl to data frame
@@ -342,6 +343,7 @@ if (exists("length_vec")){ #if we have lengths
 ```{r RPKMlExpRm}
 #Filter low expression genes
 keep<-rowSums(Nrepl_data>=0)>=0 #as most lowly expressed genes are slightly above 0(=1), so we filter starting at 1 rep and more than 5 total in samples
+keep<-apply(Nrepl_data, 1, max)>=0
 Nrepl_data<-Nrepl_data[keep,]
 
 #@@ Difference between 12 and 6 is important? -> it is we only do rpkm
@@ -439,7 +441,7 @@ ggplot(as.data.frame(umap_data$layout), aes(x=umap_data$layout[,1], y=umap_data$
 
 ```
 ```{r}
-FinalUmap<-umap(sc_Nrepl_UMAP, n_neighbors=29, n_epochs=450, min_dist=0.1) #nneighbor: 22 ##rework depending on normalization
+FinalUmap<-umap(sc_Nrepl_UMAP, n_neighbors=35, n_epochs=450, min_dist=0.1) #nneighbor: 22, [29] ##rework depending on normalization
 #Modify min_dist as 0.1 fits better the data in this case
 
 plotly::ggplotly(dataPlotter(FinalUmap, repl_meta)+
@@ -449,7 +451,7 @@ plotly::ggplotly(dataPlotter(FinalUmap, repl_meta)+
 
 # Heatmap
 
-```{r heatmap}
+```{r heatmapPrep}
 # Install package if needed
 library(pheatmap)
 
@@ -457,6 +459,27 @@ library(pheatmap)
 expression_matrix <- as.matrix(Nrepl_data)
 
 sample_correlations <- cor(expression_matrix)
+```
+
+```{r heatmapColSort}
+#@@ USELESS
+extract_parts <- function(name) {
+  strsplit(name, "_")[[1]]  # Get the part after the underscore
+}
+
+parted_names<-as.data.frame(t(data.frame(sapply(colnames(sample_correlations), extract_parts))))
+
+NameList<-paste0(parted_names$V2,"_", parted_names$V1)
+
+colnames(sample_correlations)<-NameList
+rownames(sample_correlations)<-NameList
+
+
+sample_correlations <- sample_correlations[, sort(colnames(sample_correlations))]
+sample_correlations <- sample_correlations[order(rownames(sample_correlations)), ]
+```
+
+```{r heatmap}
 
 pheatmap(sample_correlations,
                    clustering_method = "complete")
@@ -584,7 +607,7 @@ ModNetwork <- blockwiseModules(Nrepl_data,
                  nThreads = 32, #16
                  maxBlockSize = 64000, #directly related to memory, if maxBlockSize<total genes, multiple blocks will have to be used -> worse clustering
                  deepSplit = 4,
-                 TOMType = "signed", #unsigned?
+                 TOMType = "unsigned", #unsigned?
                  power = softPw,
                  mergeCutHeight = 0.3,#0.3->4799#0.8->4799(low module granularity) #0.1->4799(high granularity(lots of colors))
                  minModuleSize = 20,
@@ -608,31 +631,6 @@ module_eigengenes <- ModNetwork$MEs
 
 #get number of genes for each module
 table(ModNetwork$colors)
-
-#B73 
-#cpm 1917/22205 pw:19
-#rpkm 2068/24537 pw:19
-#rpkm_filtered 1107/25296 pw:17
-
-#DK105 pw:24 #@@recheck powers
-#cpm 4364/22386
-#rpkm 4823/25044
-#rpkm_filtered 4799/25795
-
-#EP1 
-#cpm 3167/22377 pw:21
-#rpkm 2550/25139 pw:19
-#rpkm_filtered 3456/25994 pw:21
-
-#F7 
-#cpm 4329/22592 pw:25
-#rpkm 3828/25214 pw:23
-#rpkm_filtered 3770/25786 pw:23
-
-#PE75
-#cpm 2577/22127 pw:19
-#rpkm 2758/24694 pw:19
-#rpkm_filtered 2711/25531 pw:19
 
 print(softPw)
 dim(Nrepl_data)
@@ -711,42 +709,172 @@ Binarize the location
 levels(as.factor(repl_meta$location))
 
 bin_metadata <- data.frame(
-  loc_cob=as.integer(repl_meta$location=="cob"),
-  loc_coleoptile=as.integer(repl_meta$location=="coleoptile"),
-  loc_crown_root=as.integer(repl_meta$location=="crown.root"),
-  loc_first_elongated_internode=as.integer(repl_meta$location=="first.elongated.internode"),
-  loc_flag_leaf=as.integer(repl_meta$location=="flag.leaf"),
-  loc_immature_cob=as.integer(repl_meta$location=="immature.cob"),
-  loc_immature_tassel=as.integer(repl_meta$location=="immature.tassel"),
-  loc_leaf_1=as.integer(repl_meta$location=="leaf.1"),
-  loc_leaf_3_blade=as.integer(repl_meta$location=="leaf.3.blade"),
-  loc_leaf_3_sheath=as.integer(repl_meta$location=="leaf.3.sheath"),
-  loc_leaf_5=as.integer(repl_meta$location=="leaf.5"),
-  loc_leaf_5_elongation_zone=as.integer(repl_meta$location=="leaf.5.elongation.zone"),
-  loc_leaf_5_mature=as.integer(repl_meta$location=="leaf.5.mature"),
-  loc_leaf_5_meristem=as.integer(repl_meta$location=="leaf.5.meristem"),
-  loc_leaf_8=as.integer(repl_meta$location=="leaf.8"),
-  loc_mature_seed_40_dap=as.integer(repl_meta$location=="mature.seed.40.dap"),
-  loc_meotic_tassel=as.integer(repl_meta$location=="meotic.tassel"),
-  loc_mesophyll=as.integer(repl_meta$location=="mesophyll"),
-  loc_prepollinated_cob=as.integer(repl_meta$location=="prepollinated.cob"),
-  loc_primary_root=as.integer(repl_meta$location=="primary.root"),
-  loc_primary_root_elongation_zone=as.integer(repl_meta$location=="primary.root.elongation.zone"),
-  loc_primary_root_meristematic_zone=as.integer(repl_meta$location=="primary.root.meristematic.zone"),
-  loc_root_hair_zone=as.integer(repl_meta$location=="root.hair.zone"),
-  loc_seed_10_dap=as.integer(repl_meta$location=="seed.10.dap"),
-  loc_seed_15_dap=as.integer(repl_meta$location=="seed.15.dap"),
-  loc_seed_20_dap=as.integer(repl_meta$location=="seed.20.dap"),
-  loc_seed_25_dap=as.integer(repl_meta$location=="seed.25.dap"),
-  loc_seed_30_dap=as.integer(repl_meta$location=="seed.30.dap"),
-  loc_seminal_root=as.integer(repl_meta$location=="seminal.root"),
-  loc_silk=as.integer(repl_meta$location=="silk")
+  cob_b73=as.integer(repl_meta$location=="b73_cob"),
+  coleoptile_b73=as.integer(repl_meta$location=="b73_coleoptile"),
+  crown_root_b73=as.integer(repl_meta$location=="b73_crown.root"),
+  first_elongated_internode_b73=as.integer(repl_meta$location=="b73_first.elongated.internode"),
+  flag_leaf_b73=as.integer(repl_meta$location=="b73_flag.leaf"),
+  immature_cob_b73=as.integer(repl_meta$location=="b73_immature.cob"),
+  immature_tassel_b73=as.integer(repl_meta$location=="b73_immature.tassel"),
+  leaf_1_b73=as.integer(repl_meta$location=="b73_leaf.1"),
+  leaf_3_blade_b73=as.integer(repl_meta$location=="b73_leaf.3.blade"),
+  leaf_3_sheath_b73=as.integer(repl_meta$location=="b73_leaf.3.sheath"),
+  leaf_5_b73=as.integer(repl_meta$location=="b73_leaf.5"),
+  leaf_5_elongation_zone_b73=as.integer(repl_meta$location=="b73_leaf.5.elongation.zone"),
+  leaf_5_mature_b73=as.integer(repl_meta$location=="b73_leaf.5.mature"),
+  leaf_5_meristem_b73=as.integer(repl_meta$location=="b73_leaf.5.meristem"),
+  leaf_8_b73=as.integer(repl_meta$location=="b73_leaf.8"),
+  mature_seed_40_dap_b73=as.integer(repl_meta$location=="b73_mature.seed.40.dap"),
+  meotic_tassel_b73=as.integer(repl_meta$location=="b73_meotic.tassel"),
+  mesophyll_b73=as.integer(repl_meta$location=="b73_mesophyll"),
+  prepollinated_cob_b73=as.integer(repl_meta$location=="b73_prepollinated.cob"),
+  primary_root_b73=as.integer(repl_meta$location=="b73_primary.root"),
+  primary_root_elongation_zone_b73=as.integer(repl_meta$location=="b73_primary.root.elongation.zone"),
+  primary_root_meristematic_zone_b73=as.integer(repl_meta$location=="b73_primary.root.meristematic.zone"),
+  root_hair_zone_b73=as.integer(repl_meta$location=="b73_root.hair.zone"),
+  seed_10_dap_b73=as.integer(repl_meta$location=="b73_seed.10.dap"),
+  seed_15_dap_b73=as.integer(repl_meta$location=="b73_seed.15.dap"),
+  seed_20_dap_b73=as.integer(repl_meta$location=="b73_seed.20.dap"),
+  seed_25_dap_b73=as.integer(repl_meta$location=="b73_seed.25.dap"),
+  seed_30_dap_b73=as.integer(repl_meta$location=="b73_seed.30.dap"),
+  seminal_root_b73=as.integer(repl_meta$location=="b73_seminal.root"),
+  silk_b73=as.integer(repl_meta$location=="b73_silk"),
+  
+  cob_dk105=as.integer(repl_meta$location=="dk105_cob"),
+  coleoptile_dk105=as.integer(repl_meta$location=="dk105_coleoptile"),
+  crown_root_dk105=as.integer(repl_meta$location=="dk105_crown.root"),
+  first_elongated_internode_dk105=as.integer(repl_meta$location=="dk105_first.elongated.internode"),
+  flag_leaf_dk105=as.integer(repl_meta$location=="dk105_flag.leaf"),
+  immature_cob_dk105=as.integer(repl_meta$location=="dk105_immature.cob"),
+  immature_tassel_dk105=as.integer(repl_meta$location=="dk105_immature.tassel"),
+  leaf_1_dk105=as.integer(repl_meta$location=="dk105_leaf.1"),
+  leaf_3_blade_dk105=as.integer(repl_meta$location=="dk105_leaf.3.blade"),
+  leaf_3_sheath_dk105=as.integer(repl_meta$location=="dk105_leaf.3.sheath"),
+  leaf_5_dk105=as.integer(repl_meta$location=="dk105_leaf.5"),
+  leaf_5_elongation_zone_dk105=as.integer(repl_meta$location=="dk105_leaf.5.elongation.zone"),
+  leaf_5_mature_dk105=as.integer(repl_meta$location=="dk105_leaf.5.mature"),
+  leaf_5_meristem_dk105=as.integer(repl_meta$location=="dk105_leaf.5.meristem"),
+  leaf_8_dk105=as.integer(repl_meta$location=="dk105_leaf.8"),
+  mature_seed_40_dap_dk105=as.integer(repl_meta$location=="dk105_mature.seed.40.dap"),
+  meotic_tassel_dk105=as.integer(repl_meta$location=="dk105_meotic.tassel"),
+  mesophyll_dk105=as.integer(repl_meta$location=="dk105_mesophyll"),
+  prepollinated_cob_dk105=as.integer(repl_meta$location=="dk105_prepollinated.cob"),
+  primary_root_dk105=as.integer(repl_meta$location=="dk105_primary.root"),
+  primary_root_elongation_zone_dk105=as.integer(repl_meta$location=="dk105_primary.root.elongation.zone"),
+  primary_root_meristematic_zone_dk105=as.integer(repl_meta$location=="dk105_primary.root.meristematic.zone"),
+  root_hair_zone_dk105=as.integer(repl_meta$location=="dk105_root.hair.zone"),
+  seed_10_dap_dk105=as.integer(repl_meta$location=="dk105_seed.10.dap"),
+  seed_15_dap_dk105=as.integer(repl_meta$location=="dk105_seed.15.dap"),
+  seed_20_dap_dk105=as.integer(repl_meta$location=="dk105_seed.20.dap"),
+  seed_25_dap_dk105=as.integer(repl_meta$location=="dk105_seed.25.dap"),
+  seed_30_dap_dk105=as.integer(repl_meta$location=="dk105_seed.30.dap"),
+  seminal_root_dk105=as.integer(repl_meta$location=="dk105_seminal.root"),
+  silk_dk105=as.integer(repl_meta$location=="dk105_silk"),
+  
+  cob_ep1=as.integer(repl_meta$location=="ep1_cob"),
+  coleoptile_ep1=as.integer(repl_meta$location=="ep1_coleoptile"),
+  crown_root_ep1=as.integer(repl_meta$location=="ep1_crown.root"),
+  first_elongated_internode_ep1=as.integer(repl_meta$location=="ep1_first.elongated.internode"),
+  flag_leaf_ep1=as.integer(repl_meta$location=="ep1_flag.leaf"),
+  immature_cob_ep1=as.integer(repl_meta$location=="ep1_immature.cob"),
+  immature_tassel_ep1=as.integer(repl_meta$location=="ep1_immature.tassel"),
+  leaf_1_ep1=as.integer(repl_meta$location=="ep1_leaf.1"),
+  leaf_3_blade_ep1=as.integer(repl_meta$location=="ep1_leaf.3.blade"),
+  leaf_3_sheath_ep1=as.integer(repl_meta$location=="ep1_leaf.3.sheath"),
+  leaf_5_ep1=as.integer(repl_meta$location=="ep1_leaf.5"),
+  leaf_5_elongation_zone_ep1=as.integer(repl_meta$location=="ep1_leaf.5.elongation.zone"),
+  leaf_5_mature_ep1=as.integer(repl_meta$location=="ep1_leaf.5.mature"),
+  leaf_5_meristem_ep1=as.integer(repl_meta$location=="ep1_leaf.5.meristem"),
+  leaf_8_ep1=as.integer(repl_meta$location=="ep1_leaf.8"),
+  mature_seed_40_dap_ep1=as.integer(repl_meta$location=="ep1_mature.seed.40.dap"),
+  meotic_tassel_ep1=as.integer(repl_meta$location=="ep1_meotic.tassel"),
+  mesophyll_ep1=as.integer(repl_meta$location=="ep1_mesophyll"),
+  prepollinated_cob_ep1=as.integer(repl_meta$location=="ep1_prepollinated.cob"),
+  primary_root_ep1=as.integer(repl_meta$location=="ep1_primary.root"),
+  primary_root_elongation_zone_ep1=as.integer(repl_meta$location=="ep1_primary.root.elongation.zone"),
+  primary_root_meristematic_zone_ep1=as.integer(repl_meta$location=="ep1_primary.root.meristematic.zone"),
+  root_hair_zone_ep1=as.integer(repl_meta$location=="ep1_root.hair.zone"),
+  seed_10_dap_ep1=as.integer(repl_meta$location=="ep1_seed.10.dap"),
+  seed_15_dap_ep1=as.integer(repl_meta$location=="ep1_seed.15.dap"),
+  seed_20_dap_ep1=as.integer(repl_meta$location=="ep1_seed.20.dap"),
+  seed_25_dap_ep1=as.integer(repl_meta$location=="ep1_seed.25.dap"),
+  seed_30_dap_ep1=as.integer(repl_meta$location=="ep1_seed.30.dap"),
+  seminal_root_ep1=as.integer(repl_meta$location=="ep1_seminal.root"),
+  silk_ep1=as.integer(repl_meta$location=="ep1_silk"),
+  
+  cob_f7=as.integer(repl_meta$location=="f7_cob"),
+  coleoptile_f7=as.integer(repl_meta$location=="f7_coleoptile"),
+  crown_root_f7=as.integer(repl_meta$location=="f7_crown.root"),
+  first_elongated_internode_f7=as.integer(repl_meta$location=="f7_first.elongated.internode"),
+  flag_leaf_f7=as.integer(repl_meta$location=="f7_flag.leaf"),
+  immature_cob_f7=as.integer(repl_meta$location=="f7_immature.cob"),
+  immature_tassel_f7=as.integer(repl_meta$location=="f7_immature.tassel"),
+  leaf_1_f7=as.integer(repl_meta$location=="f7_leaf.1"),
+  leaf_3_blade_f7=as.integer(repl_meta$location=="f7_leaf.3.blade"),
+  leaf_3_sheath_f7=as.integer(repl_meta$location=="f7_leaf.3.sheath"),
+  leaf_5_f7=as.integer(repl_meta$location=="f7_leaf.5"),
+  leaf_5_elongation_zone_f7=as.integer(repl_meta$location=="f7_leaf.5.elongation.zone"),
+  leaf_5_mature_f7=as.integer(repl_meta$location=="f7_leaf.5.mature"),
+  leaf_5_meristem_f7=as.integer(repl_meta$location=="f7_leaf.5.meristem"),
+  leaf_8_f7=as.integer(repl_meta$location=="f7_leaf.8"),
+  mature_seed_40_dap_f7=as.integer(repl_meta$location=="f7_mature.seed.40.dap"),
+  meotic_tassel_f7=as.integer(repl_meta$location=="f7_meotic.tassel"),
+  mesophyll_f7=as.integer(repl_meta$location=="f7_mesophyll"),
+  prepollinated_cob_f7=as.integer(repl_meta$location=="f7_prepollinated.cob"),
+  primary_root_f7=as.integer(repl_meta$location=="f7_primary.root"),
+  primary_root_elongation_zone_f7=as.integer(repl_meta$location=="f7_primary.root.elongation.zone"),
+  primary_root_meristematic_zone_f7=as.integer(repl_meta$location=="f7_primary.root.meristematic.zone"),
+  root_hair_zone_f7=as.integer(repl_meta$location=="f7_root.hair.zone"),
+  seed_10_dap_f7=as.integer(repl_meta$location=="f7_seed.10.dap"),
+  seed_15_dap_f7=as.integer(repl_meta$location=="f7_seed.15.dap"),
+  seed_20_dap_f7=as.integer(repl_meta$location=="f7_seed.20.dap"),
+  seed_25_dap_f7=as.integer(repl_meta$location=="f7_seed.25.dap"),
+  seed_30_dap_f7=as.integer(repl_meta$location=="f7_seed.30.dap"),
+  seminal_root_f7=as.integer(repl_meta$location=="f7_seminal.root"),
+  silk_f7=as.integer(repl_meta$location=="f7_silk"),
+  
+  cob_pe75=as.integer(repl_meta$location=="pe75_cob"),
+  coleoptile_pe75=as.integer(repl_meta$location=="pe75_coleoptile"),
+  crown_root_pe75=as.integer(repl_meta$location=="pe75_crown.root"),
+  first_elongated_internode_pe75=as.integer(repl_meta$location=="pe75_first.elongated.internode"),
+  flag_leaf_pe75=as.integer(repl_meta$location=="pe75_flag.leaf"),
+  immature_cob_pe75=as.integer(repl_meta$location=="pe75_immature.cob"),
+  immature_tassel_pe75=as.integer(repl_meta$location=="pe75_immature.tassel"),
+  leaf_1_pe75=as.integer(repl_meta$location=="pe75_leaf.1"),
+  leaf_3_blade_pe75=as.integer(repl_meta$location=="pe75_leaf.3.blade"),
+  leaf_3_sheath_pe75=as.integer(repl_meta$location=="pe75_leaf.3.sheath"),
+  leaf_5_pe75=as.integer(repl_meta$location=="pe75_leaf.5"),
+  leaf_5_elongation_zone_pe75=as.integer(repl_meta$location=="pe75_leaf.5.elongation.zone"),
+  leaf_5_mature_pe75=as.integer(repl_meta$location=="pe75_leaf.5.mature"),
+  leaf_5_meristem_pe75=as.integer(repl_meta$location=="pe75_leaf.5.meristem"),
+  leaf_8_pe75=as.integer(repl_meta$location=="pe75_leaf.8"),
+  mature_seed_40_dap_pe75=as.integer(repl_meta$location=="pe75_mature.seed.40.dap"),
+  meotic_tassel_pe75=as.integer(repl_meta$location=="pe75_meotic.tassel"),
+  mesophyll_pe75=as.integer(repl_meta$location=="pe75_mesophyll"),
+  prepollinated_cob_pe75=as.integer(repl_meta$location=="pe75_prepollinated.cob"),
+  primary_root_pe75=as.integer(repl_meta$location=="pe75_primary.root"),
+  primary_root_elongation_zone_pe75=as.integer(repl_meta$location=="pe75_primary.root.elongation.zone"),
+  primary_root_meristematic_zone_pe75=as.integer(repl_meta$location=="pe75_primary.root.meristematic.zone"),
+  root_hair_zone_pe75=as.integer(repl_meta$location=="pe75_root.hair.zone"),
+  seed_10_dap_pe75=as.integer(repl_meta$location=="pe75_seed.10.dap"),
+  seed_15_dap_pe75=as.integer(repl_meta$location=="pe75_seed.15.dap"),
+  seed_20_dap_pe75=as.integer(repl_meta$location=="pe75_seed.20.dap"),
+  seed_25_dap_pe75=as.integer(repl_meta$location=="pe75_seed.25.dap"),
+  seed_30_dap_pe75=as.integer(repl_meta$location=="pe75_seed.30.dap"),
+  seminal_root_pe75=as.integer(repl_meta$location=="pe75_seminal.root"),
+  silk_pe75=as.integer(repl_meta$location=="pe75_silk")
 )
 
 rownames(bin_metadata)<-rownames(Nrepl_data)
 
-bin_metadata<-bin_metadata[,colSums(bin_metadata)==1]#if any rtissue is not present in sample, it will be introduced in binarization, as a full 0 column, remove it again
+bin_metadata<-bin_metadata[,colSums(bin_metadata)>=1]#if any rtissue is not present in sample, it will be introduced in binarization, as a full 0 column, remove it again
 ```
+
+```{r binSort}
+bin_metadata <- bin_metadata[, sort(names(bin_metadata))]
+bin_metadata <- bin_metadata[order(rownames(bin_metadata)), ]
+```
+
 
 ### Correlation
 
